# fusion

./: .drone.star  .gitignore  .travis.yml  CMakeLists.txt  Jamroot  README.md  appveyor.yml  build.jam
.drone/: drone.sh
.github/workflows/: ci.yml
doc/: adapted.qbk  algorithm.qbk  container.qbk  extension.qbk  functional.qbk  fusion.qbk  iterator.qbk  notes.qbk  organization.qbk  preface.qbk  references.qbk  sequence.qbk  support.qbk  tuple.qbk  view.qbk
doc/html/: index.html
libs/fusion/test/sequence/: CMakeLists.txt  std_array.cpp
meta/: explicit-failures-markup.xml
preprocess/: wave.cfg
test/: CMakeLists.txt  Jamfile  constexpr_ctti_type_index_detection.cpp  mock_fallback.hpp  quick.cpp  with_or_without_fallback.hpp
test/algorithm/: all.cpp  any.cpp  clear.cpp  copy.cpp  count.cpp  count_if.cpp  erase.cpp  erase_key.cpp  filter.cpp  filter_if.cpp  find.cpp  find_if.cpp  flatten.cpp  fold.cpp  for_each.cpp  indexed_for_each.cpp  insert.cpp  insert_range.cpp  iter_fold.cpp  join.cpp  move.cpp  none.cpp  pfr.cpp  pfr_fields.cpp  pop_back.cpp  pop_front.cpp  push_back.cpp  push_front.cpp  remove.cpp  remove_if.cpp  replace.cpp  replace_if.cpp  reverse.cpp  reverse_fold.cpp  reverse_iter_fold.cpp  segmented_find.cpp  segmented_find_if.cpp  segmented_fold.cpp  segmented_for_each.cpp  ticket-5490.cpp  (+4 more)
test/cmake_install_test/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt
test/compile_time/: sfinae_friendly.hpp
test/functional/: fused.cpp  fused_function_object.cpp  fused_procedure.cpp  invoke.cpp  invoke_function_object.cpp  (+7 more)
util/: test.jam
(+917 files in other folders)
